Completing service implementation